kubernetes/orders/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-app
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
      - name: orders-app
        image: reiounagata/aaw-marketplace-bebas-orders:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "0.2"
            memory: "64Mi"
          limits:
            cpu: "0.4"
            memory: "128Mi"
