kubernetes/orders/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: LoadBalancer  
  selector:
    app: orders-app
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 80
      nodePort: 30001
