kubernetes/orders/orders-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /orders/
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8001
